--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^4.0.0",
     "github": "^9.2.0",
     "github-api": "^3.0.0",
     "koa": "^2.2.0",
