--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "cryptiles": "^3.1.1",
     "dotenv": "^4.0.0",
+    "duration-js": "^4.0.0",
     "github": "^9.2.0",
     "koa": "^2.2.0",
     "koa-bodyparser": "4.2.0",
+    "koa-router": "^7.2.1",
     "require-dir": "^0.3.2",
     "string-template": "^1.0.0"
   },
