--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "keywords": [],
   "author": "",
   "license": "MIT",
+  "engines": {
+    "node": "8.8.0"
+  },
   "dependencies": {
     "cryptiles": "^3.1.1",
     "dotenv": "^4.0.0",
