--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "github": "^9.2.0",
     "koa": "^2.2.0",
     "koa-bodyparser": "4.2.0",
+    "koa-logger": "^3.1.0",
     "koa-router": "^7.2.1",
     "require-dir": "^0.3.2",
     "string-template": "^1.0.0"
