--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "husky": "^0.14.3",
     "lint-staged": "^6.0.0",
     "nodemon": "^1.11.0",
-    "prettier": "^1.9.0"
+    "prettier": "^1.9.0",
+    "raven": "^2.2.1"
   }
 }
