--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^4.0.0",
     "duration-js": "^4.0.0",
     "github": "^9.2.0",
+    "google-translate-api": "^2.3.0",
     "koa": "^2.2.0",
     "koa-bodyparser": "4.2.0",
     "koa-logger": "^3.1.0",
