--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "node": ">=8"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "cryptiles": "^3.1.1",
     "dotenv": "^4.0.0",
     "duration-js": "^4.0.0",
