--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,12 @@
 sudo: false
-git:
-  submodules: false
 language: node_js
 notifications:
   email:
   - hust2012jiangkai@gmail.com
 node_js:
-- '8'
-env:
-  matrix:
-  - TEST_TYPE=ci
+  - 9
 script:
-- |
-  if [ "$TEST_TYPE" = ci ]; then
-    npm run ci
-  fi
+  - npm run lint
 deploy:
   provider: heroku
   api_key:
