--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "precommit": "lint-staged"
   },
   "lint-staged": {
-    "*.{js,json,css}": ["prettier --write", "git add"]
+    "*.{js,json,css}": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -21,7 +24,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "cryptiles": "^3.1.1",
+    "cryptiles": "^4.1.2",
     "dotenv": "^4.0.0",
     "duration-js": "^4.0.0",
     "github": "^9.2.0",
